[package]
name = "radar-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
serde = { version = "1.0.199", features = ["rc"] }
serde_json = "1.0.116"
socketioxide = { version = "0.12.0", features = ["state", "tracing"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
